# ai-lingo

./: .gitignore  AGENTS.md  PRD.md  README.md  env.example  package-lock.json  package.json
.devcontainer/: .env.example  Dockerfile  devcontainer.json  postCreate.sh
.github/: CODEOWNERS
.github/copilot/: instructions.md
backend/: .coverage  .env.example  pyproject.toml
backend/app/: main.py
backend/expression_learner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/src/: __init__.py
backend/src/agents/: agent.py  state.py
backend/src/core/: __init__.py  expressions.py  llm_validation.py  models.py  rss_client.py  session_store.py
backend/tests/: __init__.py  test_agent.py  test_endpoints.py  test_expressions.py  test_llm_validation.py  test_models.py  test_rss_client.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Chat.css  Chat.tsx  EventLog.tsx  ExpressionText.tsx  ExpressionTextExample.tsx  Footer.tsx  Header.tsx  Main.tsx  MarkdownMessage.tsx  MessageContent.css  MessageContent.tsx  SessionSetup.css  SessionSetup.tsx  Welcome.tsx
frontend/src/components/__tests__/: Chat.test.tsx  EventLog.test.tsx  ExpressionText.test.tsx  MarkdownMessage.test.tsx
frontend/src/context/: ChatContext.tsx
frontend/src/hooks/: useAGUIChat.ts
frontend/src/hooks/__tests__/: useAGUIChat.test.ts
frontend/src/utils/: api.ts
