[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "expression-learner"
version = "0.1.0"
description = "Expression Learner Agent - Conversational AI for learning English idioms and expressions"
requires-python = ">=3.12"
authors = [{name = "AI Lingo Team"}]
license = {text = "MIT"}
# See PRD for architecture and requirements
# Note: No type checking enforcement (see PRD section 4.1)

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "langchain",
    "langchain-openai",
    "langgraph",
    "azure-identity",
    "python-dotenv",
    "feedparser",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "black",
    "ruff",
    "mypy",
]

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
disallow_untyped_defs = true
